[tool.poetry]
name = "no-game"
version = "0.2.0"
description = ""
authors = ["ametel01 <alex-metelli@gmx.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.7 <= 3.9"
cairo-lang = "^0.9.1"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
